--- a/.github/workflows/main_pys.yml
+++ b/.github/workflows/main_pys.yml
@@ -20,10 +20,21 @@ jobs:
       with:
         python-version: '3.6'
 
-    - name: Install Python dependencies remove python 3
+    - name: Create Virtual Environment
       run: |
         python -m venv env
+    
+    - name: Activate Virtual Environment
+      run: |
         .\env\Scripts\activate
+    
+    - name: Upgrade pip
+      run: |
+        python -m pip install --upgrade pip
+
+    - name: Install reqirements
+      run: |
+        pip install setup
         pip install -r requirements.txt
 
     - name: Zip the application files
