web config added for deployment

--- a/web.config
+++ b/web.config
@@ -1,13 +1,25 @@
 <configuration>
+    <system.webServer>
+
+        <httpErrors errorMode="Detailed"></httpErrors>
+    </system.webServer>
     <appSettings>
         <add key="pythonpath" value="%SystemDrive%\home\site\wwwroot" />
         <!-- <add key="WSGI_HANDLER" value="hostingstart-python.application" /> -->
-        <add key="WSGI_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
+        <!--<add key="WSGI_HANDLER" value="django.core.wsgi.get_wsgi_application()" /> -->
+        <!--<add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_venv_handler()" />-->
+        <!--<add key="WSGI_HANDLER" value="pys.wsgi.application" />-->
+
+        <!-- <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
+        <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\activate_this.py" />
+        <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_virtualenv_handler()" /> -->
+        <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="pys.wsgi.application" />
+        <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\python.exe" />
+        <add key="WSGI_HANDLER" value="virtualenv_proxy.get_venv_handler()" />
+
         <add key="DJANGO_SETTINGS_MODULE" value="pys.settings" />
+        <add key="WSGI_LOG" value="D:\home\LogFiles\wfastcgi.log"/>
     </appSettings>
-    <system.webServer>
-        <handlers>
-            <add name="PythonHandler" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\Python34\python.exe|D:\home\Python361x64\wfastcgi.py" resourceType="Unspecified" requireAccess="Script"/>
-        </handlers>
-    </system.webServer>
+
+
 </configuration>
